Subindo tabelas do banco de dados e atualizando formatações do simulador financeiro - Isak Amorim

--- a/Diretório-Isak de Amorim/SimuladorFinanceiro-Isak.html
+++ b/Diretório-Isak de Amorim/SimuladorFinanceiro-Isak.html
@@ -60,8 +60,8 @@
                              <br><br><br>
                              
                              <b>Com os nossos serviços: </b> <br>
-                             Produtividade por Hectar: <b style="color: green">${produtividadeComTech.toFixed(1)}</b> <b>Aumento 20%</b> <br>
-                             Lucros: R$<b style="color: green">${lucrosComTech.toFixed(2)}</b> <br>
+                             Produtividade por Hectar: <b style="color: green">${produtividadeComTech.toFixed(1)}</b> <b>Aumento de 20%</b> <br>
+                             Lucros: <b style="color: green">R$${lucrosComTech.toFixed(2)}</b> <br>
                              Investimento aproximado: <b style="color: green"><i>R$${investimentoComTech.toFixed(2)}</i></b>  <br><br>
                              Com os nossos serviços o seu investimento se mantém o mesmo! <br>
                              O que aumenta é a <b style="color: green">PRODUTIVIDADE</b> e os <b style="color: green">LUCROS<b>. <br><br>`;
