Corrigindo texto da tela do Simulador Financeiro - Isak Amorim

--- a/Diretório-Isak de Amorim/SimuladorFinanceiro-Isak.html
+++ b/Diretório-Isak de Amorim/SimuladorFinanceiro-Isak.html
@@ -28,7 +28,7 @@
     Digite a quantidade de quilos de batatas produzidas anualmente:<br><br>
     <input id="ipt_qtdBatatas"><br>
     <br><br>
-    Digite o valor vendido por saca (50kg): <br><br>
+    Digite o valor em reais vendido por saca (50kg): <br><br>
     <input id="ipt_valorSaca"><br>
     <br><br> 
 
