--- a/Diretório-Caique Gomes/simuladorFinanceira.html
+++ b/Diretório-Caique Gomes/simuladorFinanceira.html
@@ -1,23 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Financeira</title>
-</head>
-<body>
-    <h1>Calculadora Financeira</h1>
-    <p>Faça agora a simulação e veja o quanto sua Produção pode <b>Aumentar</b> com a solução IoT.</p>
-    Informe sua Produção <b>(Kgs)</b>: <input id="ipt_prod"><br>
-    Informe sua área Plantada: <b>(Hectares)</b>: <input id="ipt_area"><br><br>
-    <button onclick="simular()">Simular</button><br><br>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simulador Financeira</title>
+  </head>
+  <body>
+    <h1>Simulador Financeira</h1>
+    <p>
+      Faça agora a simulação e veja o quanto sua Produção pode
+      <b>Aumentar</b> com ajuda das soluções BataTech.
+    </p>
+    Informe sua Produção <b>(Kgs)</b>: <input id="ipt_prod" /><br />
+    Informe sua área Plantada: <b>(Hectares)</b>:
+    <input id="ipt_area" /><br /><br />
+    <button onclick="simular()">Simular</button><br /><br />
     <div id="div_result"></div>
-</body>
-<script>
-function simular(){
-    var prodArea = Number(ipt_prod.value)/Number(ipt_area.value);
-    div_result.innerHTML = 'Sua Produção atual é de: <b>'+prodArea.toFixed(1)+' Kg/ha</b><br>'+
-    'Após a implementação da solução IoT e realizando os manejos corretos, sua produção será de: <br><b><u>'+(prodArea*1.05).toFixed(1)+' Kg/ha até '+(prodArea*1.2).toFixed(1)+' Kg/ha</u></b>';
-}
-</script>
+  </body>
+  <script>
+    //As fontes para chegar nesse valor foram:
+    //https://www.bio-conferences.org/articles/bioconf/pdf/2024/05/bioconf_rtbs2024_01091.pdf
+    //https://farmonaut.com/precision-farming/revolutionizing-agriculture-how-data-driven-precision-farming-and-iot-are-optimizing-crop-yields-and-sustainability
+    function simular() {
+      //verificando de os valores inseridos são válidos
+      if (ipt_prod.value < 0) {
+        div_result.innerHTML =
+          '<spam style = "color:red;">Informe valores válidos!</spam>';
+      } else {
+        //imprime os resultados na tela
+        var prodArea = Number(ipt_prod.value) / Number(ipt_area.value);
+        div_result.innerHTML =
+          'Sua Produção atual é de: <b style = "color: gray;">' +
+          prodArea.toFixed(1) +
+          " Kg/ha</b><br>" +
+          'Após a implementação da solução IoT e realizando os manejos corretos, sua produção será de: <br><b style = "color: green;"><u>' +
+          (prodArea * 1.05).toFixed(1) +
+          " Kg/ha até " +
+          (prodArea * 1.2).toFixed(1) +
+          " Kg/ha</u></b>";
+      }
+      //verificando se os valores são válidos
+      if (ipt_area.value < 0) {
+        div_result.innerHTML =
+          '<spam style = "color:red;">Informe valores válidos!</spam>';
+      } else {
+        //imprime os resultados na tela
+        var prodArea = Number(ipt_prod.value) / Number(ipt_area.value);
+        div_result.innerHTML =
+          'Sua Produção atual é de: <b style = "color: gray;">' +
+          prodArea.toFixed(1) +
+          " Kg/ha</b><br>" +
+          'Após a implementação da solução IoT e realizando os manejos corretos, sua produção será de: <br><b style = "color: green;"><u>' +
+          (prodArea * 1.05).toFixed(1) +
+          " Kg/ha até " +
+          (prodArea * 1.2).toFixed(1) +
+          " Kg/ha</u></b>";
+      }
+    }
+  </script>
 </html>
