Criação script BD principal

--- a/Diretório-Isak de Amorim/SimuladorFinanceiro-Isak.html
+++ b/Diretório-Isak de Amorim/SimuladorFinanceiro-Isak.html
@@ -15,7 +15,7 @@
      -->
 
     <h2 style="color: forestgreen;">Simulador Financeiro</h2>
-    <p>Realize a simulação para contratar nossos serivços!
+    <p>Realize a simulação para contratar nossos serivços!x
     <br><br><br>
         Responda as perguntas abaixo com valores mais aproximados possíveis. <br>
         Calcularemos o quanto nossas ferramentas e serviço impactará de maneira <b style="color: green;">positiva</b> o seu <b style="color: brown;">plantio de batata</b>.
