Atualizando SimuladoFinanceiro2.html

--- a/SimuladoFinanceiro2.html
+++ b/SimuladoFinanceiro2.html
@@ -62,11 +62,11 @@
 
         divmsg.innerHTML =
             `<br><b>Sem os nossos serviços, esses foram os seus resultados:  </b>
-        <br>Sua produtividade total é de <b style="color: red;">${producaoatual}</b> kg/ha. 
+        <br>Sua produtividade total é de <b style="color: red;">${producaoatual}</b> kg. 
         <br>Receita atual bruto: <b style="color: red;"> R$ ${vendaatual.toFixed(2)} </b>  
 
         <br><br><b>Com os nossos serviços, esses foram os seus resultados: </b>
-        <br>Sua produtividade pode ir de <b style="color: green;">${minimoprod}kg/ha (mínimo) até ${maximoprod}kg/ha (máximo).</b> 
+        <br>Sua produtividade pode ir de <b style="color: green;">${minimoprod}kg/ha (mínimo) até ${maximoprod}kg (máximo).</b> 
         <br>Receita total bruto: <b style="color: green;">R$ ${minimovenda.toFixed(2)} até R$ ${maximovenda.toFixed(2)} </b> 
         <br>podendo economizar até <b style="color: green;">R$ ${economiaagua.toFixed(2)} em uso de água. </b> 
         `
