Atualizando SimuladoFinanceiro2.html

--- a/SimuladoFinanceiro2.html
+++ b/SimuladoFinanceiro2.html
@@ -20,7 +20,7 @@
     </div>
     <div> <!-- input-->
         Insira a área plantada (ha)* <br><input id="ipthe"> <br><br>
-        Insira sua produção por hectare (kg)* <br><input id="iptproducao"><br><br>
+        Insira sua produção por hectare (kg/ha)* <br><input id="iptproducao"><br><br>
         Custo de água por hectare* <br><input id="iptagua"><br><br>
     </div>
     <br>
