Atualizando SimuladoFinanceiro2.html

--- a/SimuladoFinanceiro2.html
+++ b/SimuladoFinanceiro2.html
@@ -68,7 +68,7 @@
         <br><br><b>Com os nossos serviços, esses foram os seus resultados: </b>
         <br>Sua produtividade pode ir de <b style="color: green;">${minimoprod}kg/ha (mínimo) até ${maximoprod}kg (máximo).</b> 
         <br>Receita total bruta: <b style="color: green;">R$ ${minimovenda.toFixed(2)} até R$ ${maximovenda.toFixed(2)} </b> 
-        <br>podendo economizar até <b style="color: green;">R$ ${economiaagua.toFixed(2)} em uso de água. </b> 
+        <br>A economia de água poderá ser de até <b style="color: green;">R$ ${economiaagua.toFixed(2)}. </b> 
         `
     }
 </script>
