Atualizando SimuladoFinanceiro2.html
Mexi na cor mostrada ao informar a produtividade e renda bruta atuais do cliente

--- a/SimuladoFinanceiro2.html
+++ b/SimuladoFinanceiro2.html
@@ -62,8 +62,8 @@
 
         divmsg.innerHTML =
             `<br><b>Sem os nossos serviços, esses foram os seus resultados:  </b>
-        <br>Sua produtividade total é de <b style="color: red;">${producaoatual}</b> kg. 
-        <br>Receita atual bruta: <b style="color: red;"> R$ ${vendaatual.toFixed(2)} </b>  
+        <br>Sua produtividade total é de <b style="color: blue;">${producaoatual}</b> kg. 
+        <br>Receita atual bruta: <b style="color: blue;"> R$ ${vendaatual.toFixed(2)} </b>  
 
         <br><br><b>Com os nossos serviços, esses foram os seus resultados: </b>
         <br>Sua produtividade pode ir de <b style="color: green;">${minimoprod}kg/ha (mínimo) até ${maximoprod}kg (máximo).</b> 
