--- a/HTML/SimuladoFinanceiro2.html
+++ b/HTML/SimuladoFinanceiro2.html
@@ -66,7 +66,7 @@
         <br>Receita atual bruta: <b style="color: blue;"> R$ ${vendaatual.toFixed(2)} </b>  
 
         <br><br><b>Com os nossos serviços, esses foram os seus resultados: </b>
-        <br>Sua produtividade pode ir de <b style="color: green;">${minimoprod}kg/ha (mínimo) até ${maximoprod}kg (máximo).</b> 
+        <br>Sua produtividade pode ir de <b style="color: green;">${minimoprod}kg (mínimo) até ${maximoprod}kg (máximo).</b> 
         <br>Receita total bruta: <b style="color: green;">R$ ${minimovenda.toFixed(2)} até R$ ${maximovenda.toFixed(2)} </b> 
         <br>A economia de água poderá ser de até <b style="color: green;">R$ ${economiaagua.toFixed(2)}. </b> 
         `
