Corrigindo erros do Simulador Financeiro após a primeira Sprint

--- a/HTML/SimuladoFinanceiro2.html
+++ b/HTML/SimuladoFinanceiro2.html
@@ -61,14 +61,21 @@
         //Mensagem a ser mostrada na DIV.
 
         divmsg.innerHTML =
-            `<br><b>Sem os nossos serviços, esses foram os seus resultados:  </b>
+        `<br><b>Sem os nossos serviços, esses foram os seus resultados:  </b>
         <br>Sua produtividade total é de <b style="color: blue;">${producaoatual}</b> kg. 
         <br>Receita atual bruta: <b style="color: blue;"> R$ ${vendaatual.toFixed(2)} </b>  
 
         <br><br><b>Com os nossos serviços, esses foram os seus resultados: </b>
-        <br>Sua produtividade pode ir de <b style="color: green;">${minimoprod}kg (mínimo) até ${maximoprod}kg (máximo).</b> 
-        <br>Receita total bruta: <b style="color: green;">R$ ${minimovenda.toFixed(2)} até R$ ${maximovenda.toFixed(2)} </b> 
-        <br>A economia de água poderá ser de até <b style="color: green;">R$ ${economiaagua.toFixed(2)}. </b> 
+        <br>Sua produtividade pode ir de <b style="color: green;">${minimoprod}kg</b>, até <b style="color: green;">${maximoprod}kg</b>. 
+        <br>Receita total bruta: <b style="color: green;">R$ ${minimovenda.toFixed(2)}</b> até <b style="color: green;">R$ ${maximovenda.toFixed(2)} </b> 
+        <br>A economia de água poderá ser de até <b style="color: green;">R$ ${economiaagua.toFixed(2)}. </b> <br><br>
+        <b>Comprovado pelo Instituto de Desenvolvimento Rural do Paraná, com tecnologia, a produtividade e receita total bruta da sua plantação recebe um acréscimo de 5% a 20%!!</b> <br>
+        Saiba mais em: https://www.idrparana.pr.gov.br/Noticia/Combate-compactacao-do-solo-aumenta-produtividade-da-agropecuaria <br><br>
+
+        <b>Além disso, de acordo com a MoldStud, a utilização da tecnologia de sensores pode levar a uma redução no consumo de água em até 30%.</b> <br>
+        Saiba mais em: https://moldstud.com/articles/p-implementing-iot-for-sustainable-agriculture-practices-in-enterprises <br><br>
+
+        Contrate os nossos serviços já! Entre em contato conosco para mais detalhes de como implementar nossa solução na sua plantação.
         `
     }
 </script>
